src/styles/variables.css
:root {
	--color-primary: #8352c5;
	--color-primary-disabled: #EFEAF1;
	--color-black: #373c44;
	--color-accent: #FFA23A;
	--color-success: #158667;
	--color-success-bg: #22c697;
	--color-error: #D53E51;
	--color-error-bg: #df6f7d;

	/* breakpoints  less than*/
	--bp-mobile-s: 576px;
	--bp-mobile: 768px;
	--bp-tablet: 1024px;
	--bp-laptop: 1280px;
	--bp-desktop: 1584px;

	/* z-index */
	--z-pop-up-menu: 90;
	--z-nav: 98;
	--z-nav-toggle: 99;
	--z-overlay: 100;
	--z-slide-panel: 101;
	--z-modal: 102;
}

